--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anasayfa</title>
-</head>
-
-<body>
-    <hr>
-    <h5>Name ---> {{ user.name }}</h5>
-    <hr>
-    <h5>Surname ---> {{ user.surname }} </h5>
-    <hr>
-    <h5>Age ---> {{ user.age }} </h5>
-    <hr>
-    <h5>Nick ---> {{ user.nick }} </h5>
-</body>
-
-</html>
+{% extends "layout.html" %} {% block title%} INDEX {% endblock %}
