--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -7,7 +7,7 @@
 
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="/education">EĞİTİMLER </a>
+                <a class="nav-link" href="/educations">EĞİTİMLER </a>
             </li>
 
             <li class="nav-item active">
@@ -21,7 +21,7 @@
             </li>
 
             <li class="nav-item active">
-                <a class="nav-link" href="/register">GİRİŞ YAP </a>
+                <a class="nav-link" href="/login">GİRİŞ YAP </a>
             </li>
         </ul>
     </div>
