form sign up için eklendi, msql bağlantısı yapılmalı

--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,20 @@
-{% extends "layout.html" %} {% block body %}
+{% extends "layout.html" %} 
+
+{% block body %}
+{% from "includes/formhelpers.html" import render_field %}
 <div class="jumbotron text-center">
 <h3>KAYIT SAYFASI</h3>
-    
+</div>
+
+<form method="post">
+    <dl>
+      {{ render_field(form.name, class="form-control") }}
+      {{ render_field(form.username, class="form-control") }}
+      {{ render_field(form.email, class="form-control") }}
+      {{ render_field(form.password, class="form-control") }}
+      {{ render_field(form.confirm, class="form-control") }}
+    </dl>
+
+    <button type="submit" class="btn btn-primary">KAYDOL</button>
+</form>
 {% endblock %}
