--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,10 @@
     {% include "includes/navbar.html" %}
 
     <br><br><br>
+
     <div class="container">
+        {% include "includes/messages.html" %}
+
         {% block body %} data {% endblock %}
     </div>
 </body>
