--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,17 @@
-{% extends "layout.html" %} {% block body %}
+{% extends "layout.html" %} 
+
+{% block body %}
+{% from "includes/formhelpers.html" import render_field %}
 <div class="jumbotron text-center">
 <h3>GİRİŞ SAYFASI</h3>
+</div>
 
+<form method="post">
+    <dl>
+      {{ render_field(form.username) }}
+      {{ render_field(form.password) }}
+    </dl>
+
+    <button type="submit" class="btn btn-primary">GİRİŞ YAP</button>
+</form>
 {% endblock %}
