--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -16,9 +16,19 @@
         </ul>
 
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="/login">GİRİŞ YAP </a>
-            </li>
+            {% if session["logged_in"] %}
+                <li class="nav-item active">
+                    <a class="nav-link" href="/dashboard">DASHBOARD</a>
+                </li>
+
+                <li class="nav-item active">
+                    <a class="nav-link" href="/logout">ÇIKIŞ YAP </a>
+                </li>
+            {% else %}
+                <li class="nav-item active">
+                    <a class="nav-link" href="/login">GİRİŞ YAP </a>
+                </li>
+            {% endif %}
             
             <li class="nav-item active">
                 <a class="nav-link" href="/register">KAYDOL </a>
