--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,4 +8,40 @@
 <small> HOŞGELDİN, {{session["username"]}} </small>
 </div>
 
+<a class="btn btn-success" href="/addarticle"> Makale Ekle </a>
+
+<br>
+<hr>
+
+{% if articles %}
+
+<table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">BAŞLIK</th>
+        <th scope="col">YAZAR</th>
+        <th scope="col">TARİH</th>
+        <th scope="col"></th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
+    <tbody>
+        {% for article in articles %}
+            <tr>
+                <th scope="row">{{ article.id }}</th>
+                <td><a href="/article/{{ article.id }}">{{ article.title }}</a></td>
+                <td>{{ article.author }}</td>
+                <td>{{ article.created_date }}</td>
+                <td><a class="btn btn-warning" href="/edit/{{ article.id }}">GÜNCELLE</a></td>
+                <td><a class="btn btn-danger" href="/delete/{{ article.id }}">SİL</a></td>
+            </tr>
+        {% endfor %}
+    </tbody>
+  </table>
+
+{% else %}
+    <h5 class="alert alert-danger">MAKALE BULUNAMADI..</h5>
+{% endif %}
+
 {% endblock %}
