--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -7,7 +7,7 @@
 
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="/educations">EĞİTİMLER </a>
+                <a class="nav-link" href="/articles">MAKALELER </a>
             </li>
 
             <li class="nav-item active">
