database users confirmation has been updated

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -2,7 +2,9 @@
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="/"> | HW BLOG | </a>
+    <a class="navbar-brand" href="/">
+        <img src="https://cdn.shopify.com/s/files/1/2345/4473/files/HWLA_Logo_BLK_b8f029da-2503-43f5-b9ea-7d74bac7f135.jpg?height=628&pad_color=fff&v=1507077496&width=1200" width="120" height="70"></a>
+
     <div class="collapse navbar-collapse" id="navbarCollapse">
 
         <ul class="navbar-nav mr-auto">
