--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,36 @@
 {% extends "layout.html" %}
 {% block body %}
 <div class="jumbotron text-center">
-    <h3>Anasayfa</h3>
-    <p>Eğitimcilerimizin Yazılarını Paylaşabilecekleri Bir Platform</p>
+    <h3>LEARN TEACH AND REPEAT</h3>
+
+    <hr>
+    <img src="https://miro.medium.com/max/3840/1*U-R58ahr5dtAvtSLGK2wXg.png" width="1000" height="500"/>
+    <hr>
 </div>
 
-<hr>
-<h5>Merhaba</h5>
-<br>
-<p>Hello World ailesi olarak yaklaşık 1,5 yıldır youtube, linkedin, instagram gibi mecralarda kendi eğiimlerimizi
-    paylaşmaya çalışıyoruz.</p>
-<p>Bu eğitimlerin içerikleri sizlerin talepleri doğrultusunda şekilleniyor.</p>
-<hr>
+<div class="row">
+    <div class="col-lg-4">
+      <img class="rounded-circle" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQvg0iaRrgryVjIAbHSF_rGOLTqkfr6NpY9yw&usqp=CAU" alt="Generic placeholder image" width="140" height="140">
+      <h2>EDUCATIONS</h2>
+      <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+      <p><a class="btn btn-secondary" href="/articles" role="button">DETAYLAR >></a></p>
+    </div>
+
+    <div class="col-lg-4">
+      <img class="rounded-circle" src="https://www.trilogyed.com/blog/wp-content/uploads/2019/07/MG_7947-1.jpg" alt="Generic placeholder image" width="140" height="140">
+      <h2>INSTRUCTORS</h2>
+      <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+      <p><a class="btn btn-secondary" href="#" role="button">DETAYLAR >></a></p>
+    </div>
+
+    <div class="col-lg-4">
+      <img class="rounded-circle" src="https://images.theconversation.com/files/304620/original/file-20191202-79465-1jnlx05.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=926&fit=clip" alt="Generic placeholder image" width="140" height="140">
+      <h2>SOCIAL</h2>
+      <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+      <p><a class="btn btn-secondary" href="/about" role="button">DETAYLAR >></a></p>
+    </div>
+  </div>
+
 <h5> Eğitimlerimiz </h5>
 
 <ul>
