--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,10 +1,120 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <style>
+        .register {
+          background: -webkit-linear-gradient(left, #ffc107, #eedb71);
+          margin-top: 3%;
+          padding: 3%;
+        }
+        .register-left {
+          text-align: center;
+          color: #fff;
+          margin-top: 4%;
+        }
+        .register-left input {
+          border: none;
+          border-radius: 1.5rem;
+          padding: 2%;
+          width: 60%;
+          background: #f8f9fa;
+          font-weight: bold;
+          color: #383d41;
+          margin-top: 30%;
+          margin-bottom: 3%;
+          cursor: pointer;
+        }
+        .register-right {
+          background: #f8f9fa;
+          border-top-left-radius: 10% 50%;
+          border-bottom-left-radius: 10% 50%;
+        }
+        .register-left img {
+          margin-top: 15%;
+          margin-bottom: 5%;
+          width: 25%;
+          -webkit-animation: mover 2s infinite alternate;
+          animation: mover 1s infinite alternate;
+        }
+        @-webkit-keyframes mover {
+          0% {
+            transform: translateY(0);
+          }
+          100% {
+            transform: translateY(-20px);
+          }
+        }
+        @keyframes mover {
+          0% {
+            transform: translateY(0);
+          }
+          100% {
+            transform: translateY(-20px);
+          }
+        }
+        .register-left p {
+          font-weight: lighter;
+          padding: 12%;
+          margin-top: -9%;
+        }
+        .register .register-form {
+          padding: 10%;
+          margin-top: 10%;
+        }
+        .btnRegister {
+          float: right;
+          margin-top: 10%;
+          border: none;
+          border-radius: 1.5rem;
+          padding: 2%;
+          background: #ffc107;
+          color: #fff;
+          font-weight: 600;
+          width: 50%;
+          cursor: pointer;
+        }
+        .register .nav-tabs {
+          margin-top: 3%;
+          border: none;
+          background: #ffc107;
+          border-radius: 1.5rem;
+          width: 28%;
+          float: right;
+        }
+        .register .nav-tabs .nav-link {
+          padding: 2%;
+          height: 34px;
+          font-weight: 600;
+          color: #fff;
+          border-top-right-radius: 1.5rem;
+          border-bottom-right-radius: 1.5rem;
+        }
+        .register .nav-tabs .nav-link:hover {
+          border: none;
+        }
+        .register .nav-tabs .nav-link.active {
+          width: 100px;
+          color: #0062cc;
+          border: 2px solid #0062cc;
+          border-top-left-radius: 1.5rem;
+          border-bottom-left-radius: 1.5rem;
+        }
+        .register-heading {
+          text-align: center;
+          margin-top: 8%;
+          margin-bottom: -15%;
+          color: #495057;
+        }
+    </style>
     <title>HW Blog</title>
 </head>
 
@@ -26,7 +136,9 @@
 <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
 <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 <script src="https://cdn.ckeditor.com/4.15.0/standard/ckeditor.js"></script>
-
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
 <script>
 CKEDITOR.replace('content', {
