--- a/templates/login.html
+++ b/templates/login.html
@@ -2,16 +2,38 @@
 
 {% block body %}
 {% from "includes/formhelpers.html" import render_field %}
-<div class="jumbotron text-center">
-<h3>GİRİŞ SAYFASI</h3>
+
+<div style="background-color: #ffc107">
+  <div class="card border-warning mb-3 container"
+    style="max-width: 35%;
+      max-height: 100%;
+      background-color: white;
+      top: 100px;
+      border-radius: 10%;">
+
+    <br>
+    <div class="card-header " style="padding-left: 42%;" >Login Page</div>
+    
+    <div class="card-body text-warning">
+      <form method="post" class="form-signin">
+        <label for="inputEmail" class="sr-only">{{ render_field(form.username) }}</label>
+        <input type="email" id="inputEmail" class="form-control" placeholder="Email address">
+        <br>
+        <label for="inputPassword" class="sr-only">{{ render_field(form.password) }}</label>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password">
+          
+        <div class="checkbox mb-3" style="margin-left: 60%;">
+          <br>
+          <label>
+            <input  type="checkbox" value="remember-me"> Remember me
+          </label>
+        </div>
+
+        <button class="btn btn-lg btn-warning btn-block" type="submit">Login</button>
+    </form>
+    </div>
+  </div>
 </div>
 
-<form method="post">
-    <dl>
-      {{ render_field(form.username) }}
-      {{ render_field(form.password) }}
-    </dl>
 
-    <button type="submit" class="btn btn-primary">GİRİŞ YAP</button>
-</form>
 {% endblock %}
