--- a/templates/register.html
+++ b/templates/register.html
@@ -2,19 +2,60 @@
 
 {% block body %}
 {% from "includes/formhelpers.html" import render_field %}
-<div class="jumbotron text-center">
-<h3>KAYIT SAYFASI</h3>
-</div>
+
 
 <form method="post">
-    <dl>
-      {{ render_field(form.name, class="form-control") }}
-      {{ render_field(form.username, class="form-control") }}
-      {{ render_field(form.email, class="form-control") }}
-      {{ render_field(form.password, class="form-control") }}
-      {{ render_field(form.confirm, class="form-control") }}
-    </dl>
+  
+<div class="container register">
+  <div class="row">
+    <div class="col-md-3 register-left">
+      <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt="" />
+      <h3>Welcome</h3>
 
-    <button type="submit" class="btn btn-primary">KAYDOL</button>
+      <input type="submit" name="" value="Login" /><br />
+    </div>
+    <div class="col-md-9 register-right">
+      <div class="tab-content" id="myTabContent">
+        <div
+          class="tab-pane fade show active"
+          id="home"
+          role="tabpanel"
+          aria-labelledby="home-tab">
+
+          <h3 class="register-heading">Kayıt Ol</h3>
+
+          <div class="row register-form">
+            <div class="col-md-6">
+              <div class="form-group">
+                {{ render_field(form.name, class="form-control") }}
+              </div>
+
+              <div class="form-group">
+                {{ render_field(form.password, class="form-control") }}
+              </div>
+
+              <div class="form-group">
+                {{ render_field(form.confirm, class="form-control") }}
+              </div>
+    
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                {{ render_field(form.email, class="form-control") }}
+              </div>
+
+              <div class="form-group">
+                {{ render_field(form.username, class="form-control") }}
+              </div>
+
+              <input type="submit" class="btnRegister" value="Register"/>
+            </div>
+          </div>
+        </div>
+        <div class="tab-pane fade show" id="profile" role="tabpanel" aria-labelledby="profile-tab"></div>
+      </div>
+    </div>
+  </div>
+</div>
 </form>
 {% endblock %}
