--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -9,11 +9,11 @@
 
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="/articles">MAKALELER </a>
+                <a class="nav-link" href="/articles">ARTICLES </a>
             </li>
 
             <li class="nav-item active">
-                <a class="nav-link" href="/about">HAKKIMIZDA </a>
+                <a class="nav-link" href="/about">ABOUT US </a>
             </li>
         </ul>
 
@@ -24,16 +24,16 @@
                 </li>
 
                 <li class="nav-item active">
-                    <a class="nav-link" href="/logout">ÇIKIŞ YAP </a>
+                    <a class="nav-link" href="/logout">LOGOUT </a>
                 </li>
             {% else %}
                 <li class="nav-item active">
-                    <a class="nav-link" href="/login">GİRİŞ YAP </a>
+                    <a class="nav-link" href="/login">LOGIN </a>
                 </li>
             {% endif %}
             
             <li class="nav-item active">
-                <a class="nav-link" href="/register">KAYDOL </a>
+                <a class="nav-link" href="/register">SIGN UP </a>
             </li>
         </ul>
     </div>
