--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
     </div>
   </div>
 
-<h5> Eğitimlerimiz </h5>
+<h5> Our Educations </h5>
 
 <ul>
     {% for education in educations %}
@@ -40,7 +40,7 @@
 </ul>
 
 <hr>
-<h5>YAZARLAR</h5>
+<h5>AUTHORS</h5>
 <ul>
     {% for instructor in instructors %}
         <li>{{ instructor.id }} - {{ instructor.name }} | {{instructor.profession}}</li>
