--- a/templates/layout.html
+++ b/templates/layout.html
@@ -122,7 +122,7 @@
     {% include "includes/navbar.html" %}
 
     <br><br><br>
-    <div class="container" style="background-color: aliceblue;">
+    <div class="container">
         {% include "includes/messages.html" %}
 
         {% block body %} data {% endblock %}
