--- a/templates/register.html
+++ b/templates/register.html
@@ -11,8 +11,8 @@
     <div class="col-md-3 register-left">
       <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt="" />
       <h3>Welcome</h3>
-
-      <input type="submit" name="" value="Login" /><br />
+      <hr>
+      <h5>Please enter your confirmation for registration</h2>
     </div>
     <div class="col-md-9 register-right">
       <div class="tab-content" id="myTabContent">
@@ -22,12 +22,26 @@
           role="tabpanel"
           aria-labelledby="home-tab">
 
-          <h3 class="register-heading">Kayıt Ol</h3>
+          <h3 class="register-heading">SIGN UP</h3>
 
           <div class="row register-form">
             <div class="col-md-6">
               <div class="form-group">
                 {{ render_field(form.name, class="form-control") }}
+              </div>
+
+              <div class="form-group">
+                {{ render_field(form.surname, class="form-control") }}
+              </div>
+
+              <div class="form-group">
+                {{ render_field(form.email, class="form-control") }}
+              </div>
+            </div>
+
+            <div class="col-md-6">
+              <div class="form-group">
+                {{ render_field(form.username, class="form-control") }}
               </div>
 
               <div class="form-group">
@@ -37,19 +51,10 @@
               <div class="form-group">
                 {{ render_field(form.confirm, class="form-control") }}
               </div>
-    
             </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                {{ render_field(form.email, class="form-control") }}
-              </div>
+          
+            <input type="submit" class="btnRegister col-md-4" style="margin-left: 33%;" value="Register"/>
 
-              <div class="form-group">
-                {{ render_field(form.username, class="form-control") }}
-              </div>
-
-              <input type="submit" class="btnRegister" value="Register"/>
-            </div>
           </div>
         </div>
         <div class="tab-pane fade show" id="profile" role="tabpanel" aria-labelledby="profile-tab"></div>
