--- a/templates/update.html
+++ b/templates/update.html
@@ -15,7 +15,7 @@
       {{ render_field(form.content, class = "form-control") }}
     </dl>
 
-    <button type="submit" class="btn btn-danger">GÜNCELLE</button>
+    <button type="submit" class="btn btn-danger">UPDATE</button>
 </form>
 {% endblock %}
 
