--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -3,7 +3,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <a class="navbar-brand" href="/">
-        <img src="https://cdn.shopify.com/s/files/1/2345/4473/files/HWLA_Logo_BLK_b8f029da-2503-43f5-b9ea-7d74bac7f135.jpg?height=628&pad_color=fff&v=1507077496&width=1200" width="120" height="30"></a>
+        <img src="https://cdn.shopify.com/s/files/1/2345/4473/files/HWLA_Logo_BLK_b8f029da-2503-43f5-b9ea-7d74bac7f135.jpg?height=628&pad_color=fff&v=1507077496&width=1200" width="120" height="40"></a>
 
     <div class="collapse navbar-collapse" id="navbarCollapse">
 
@@ -12,8 +12,14 @@
                 <a class="nav-link" href="/articles">ARTICLES </a>
             </li>
 
+            <!-- 
+                <li class="nav-item active">
+                    <a class="nav-link" href="/about">ABOUT US </a>
+                </li>
+            -->
+
             <li class="nav-item active">
-                <a class="nav-link" href="/about">ABOUT US </a>
+                <a class="nav-link" href="/leagues">LEAGUES </a>
             </li>
         </ul>
 
