--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -12,14 +12,8 @@
                 <a class="nav-link" href="/articles">ARTICLES </a>
             </li>
 
-            <!-- 
-                <li class="nav-item active">
-                    <a class="nav-link" href="/about">ABOUT US </a>
-                </li>
-            -->
-
             <li class="nav-item active">
-                <a class="nav-link" href="/leagues">LEAGUES </a>
+                <a class="nav-link" href="/instructors">INSTRUCTORS </a>
             </li>
         </ul>
 
@@ -32,15 +26,20 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="/logout">LOGOUT </a>
                 </li>
+
+                <li class="nav-item active">
+                    <a class="nav-link" href="/profile">PROFILE </a>
+                </li>
             {% else %}
                 <li class="nav-item active">
                     <a class="nav-link" href="/login">LOGIN </a>
                 </li>
+
+                <li class="nav-item active">
+                    <a class="nav-link" href="/register">SIGN UP </a>
+                </li>
             {% endif %}
             
-            <li class="nav-item active">
-                <a class="nav-link" href="/register">SIGN UP </a>
-            </li>
         </ul>
     </div>
 </nav>
